2009-05-09  Nicolas François  <nicolas.francois@centraliens.net>

	* src/userdel.c: Remove duplicate definitions of exit codes.

2009-05-07  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/non_interactive_pam_conv.c,
	libmisc/pam_pass_non_interractive.c, libmisc/Makefile.am: Renamed.
	* libmisc/pam_pass_non_interractive.c, lib/prototypes.h:
	non_interactive_password and non_interactive_pam_conv do not need
	to be externally visible.
	* libmisc/pam_pass_non_interractive.c: Added declaration of
	ni_conv.
	* libmisc/pam_pass_non_interractive.c: Only compile ifdef USE_PAM.
	* libmisc/pam_pass_non_interractive.c, lib/prototypes.h:
	Added do_pam_passwd_non_interractive().
	* src/chpasswd.c: Use do_pam_passwd_non_interractive().

2009-05-07  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/pam_pass.c: Removed comment regarding pam_misc. This is
	checked by configure.in.

2009-05-07  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.defs.5.xml: PAM enabled chpasswd do not use any
	configuration variable from login.defs.

2009-05-07  Nicolas François  <nicolas.francois@centraliens.net>

	* man/passwd.1.xml: Differentiate the files used for PAM and
	non-PAM versions.

2009-05-07  Nicolas François  <nicolas.francois@centraliens.net>

	* man/chpasswd.8.xml: Describe how chpasswd in case of error.
	* man/chpasswd.8.xml: Describe the PAM enabled chpasswd behavior.
	* man/chpasswd.8.xml: Differentiate the files and configurations
	used for PAM and non-PAM versions.

2009-05-07  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: failcount does not need to be signed.

2009-05-07  Nicolas François  <nicolas.francois@centraliens.net>

	* src/Makefile.am: PAM enabled chpasswd now needs to be linked to
	the PAM library, even if --enable-account-tools-setuid is not
	used.

2009-05-07  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chpasswd.c: Added the line number when an error is reported